syntax = "proto3";

option go_package = "github.com/smartcontractkit/chainlink-common/pkg/beholder/pb";

package pb;

// Used for testing 
message CustomMessage {
  bool bool_val=1;
  int64 int_val=2;
  float float_val=3;
  string string_val=4;
  bytes bytes_val=5;
}